--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
 steps:
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['functions', 'deploy', 'helloCiCd', '--trigger-http', '--runtime', 'nodejs12', '--entry-point', 'helloCiCd']
+  args: ['functions', 'deploy', 'SangVV', '--trigger-http', '--runtime', 'nodejs12', '--entry-point', 'SangvvQ12']
   id: 'HandsOnLab-ci-cd-with-cloud-function'
